Use httponly cookie on backend to store refresh token
